--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             <div class="wrapper">
                 <ul id="todo-list">
                     <li v-for="(todo,index) in  todoList" class="todo"
-                    :class="todo.done ? 'done' : '' " @click="toggleTodo(index)">{{ todo.text }}
-                    <span @click.stop="deleteTodo(index)">x</span>
+                    :class="todo.done ? 'done' : '' " @click="toggleTodo(index)">
+                    <span class="todo">{{ todo.text }}</span>
+                    <span @click.stop="deleteTodo(index)" class="trash-can-span"><i class="fa-solid fa-trash-can"></i></span>
                     </li>
                 </ul>
             </div>
             <div class="add-todo">
                 <input type="text" placeholder="new task" v-model.trim="newTodoText" name="newTodoText">
-                <button @click="addTodo" class="btn-add">+</button>
+                <button @click="addTodo" class="btn-add"><i class="fa-solid fa-plus"></i></button>
             </div>
         </div>
     </div>
